# scacchi-painter

./: .gitignore  ISSUE_TEMPLATE.md  _config.yml  azure-pipelines-gui.yml  azure-pipelines.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  post-release-sync.md  readme.md  release-flow.md  scacchi-painter.sln  sp-workspace.code-workspace
.github/: copilot-instructions.md  dependabot-close-comment.md  dependabot.yml  plan-webWorkerEngine.prompt.md
.github/prompts/: 01-rust-solver-workspace-architecture.prompt.md  02-orthodox-chess-core-mvp.prompt.md  (+9 more)
Core/: Core.sln  readme.md
CoreJS/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.lib.json  tsconfig.lib.tsbuildinfo  tsconfig.test.json  tsconfig.tsbuildinfo  vitest.config.ts
CoreRust/: ARCHITECTURE.md  Cargo.toml  README.md
CoreRust/apps/solver-cli/: Cargo.toml  README.md
CoreRust/apps/solver-cli/corpus/: mate_in_1.popeye  mate_in_2_qf1.popeye  mate_in_3_be6.popeye  no_solution_empty_board.popeye
CoreRust/apps/solver-cli/src/: main.rs
CoreRust/crates/chess-core/: Cargo.toml
CoreRust/crates/chess-core/src/: lib.rs
CoreRust/crates/problem-io/: Cargo.toml
CoreRust/crates/problem-io/src/: lib.rs
CoreRust/crates/problem-solver/: Cargo.toml
CoreRust/crates/problem-solver/src/: cache.rs  error.rs  fen.rs  lib.rs  moves.rs  san.rs  search.rs
CoreRust/crates/problem-solver/tests/: end_to_end.rs
docs/: index.md  solver-cli.md
graphics/: spx.icns  spx.xcf
release-notes/: v0.2.2.md
scripts/: dev-runner.mjs
src/: readme.md  scacchi-painter.sln
(+925 files in other folders)
