[workspace]
resolver = "2"
members = [
    "crates/chess-core",
    "crates/problem-io",
    "crates/problem-solver",
    "apps/solver-cli",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/dardino/scacchi-painter"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
