[package]
name = "solver-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
problem-io = { path = "../../crates/problem-io" }
problem-solver = { path = "../../crates/problem-solver" }
tracing.workspace = true
tracing-subscriber.workspace = true
